force-app/main/default/objects/Country__c/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <label>Products</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Test_checkbox__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>TestProd</fullName>
            </value>
            <value>
                <fullName>TestProd1</fullName>
            </value>
            <value>
                <fullName>TestProd2</fullName>
            </value>
            <value>
                <fullName>TestProd3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>