force-app/main/default/objects/Country__c/fields/Test_Category__c.field-meta.xml
<CustomField>
    <fullName>Test_Category__c</fullName>
    <label>Test Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Test</fullName>
            </value>
            <value>
                <fullName>Test1</fullName>
            </value>
            <value>
                <fullName>Test2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>