force-app/main/default/objects/Country__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <defaultValue>&quot;http://www.google.com&quot;</defaultValue>
    <label>URL</label>
    <type>Url</type>
</CustomField>