force-app/main/default/objects/Country__c/listViews/Asia_Regions.listView-meta.xml
<ListView>
    <fullName>Asia_Regions</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Asia Regions</label>
</ListView>